# airflow-dbt

./: .env.example  .gitignore  Dockerfile  README.md  airflow.cfg  pyproject.toml  requirements.txt  spotify_top_2023_metadata.csv
analytics/: .sqlfluff  README.md  dbt_project.yml  profiles.yml
analytics/models/: sources.yml
analytics/models/spotify_derived/: high_valence_tracks_after_2020.sql  high_valence_tracks_after_2020.yml  top_10_artists_by_total_streams.sql  top_10_artists_by_total_streams.yml  top_25_tracks_by_danceability.sql  top_25_tracks_by_danceability.yml
analytics/models/staging/spotify/: stg_spotify_tracks.sql  stg_spotify_tracks.yml
analytics_pipeline/: .user.yml  dbt_project.yml  profiles.yml
analytics_pipeline/models/: sources.yml
analytics_pipeline/models/derived/: base_values.sql  base_values.yml
analytics_pipeline/models/spotify_derived/: high_valence_tracks_after_2020.sql  top_10_artists_by_total_streams.sql  top_10_artists_by_total_streams.yml  top_25_tracks_by_danceability.yml
dags/: daily_dbt.py  dbt_dag.py  spotify_ingestion.py
terraform/: .terraform.lock.hcl  README.md  main.tf  terraform.tfvars  variables.tf
terraform/modules/service_account/: main.tf  variables.tf
