[tool.poetry]
name = "airflow-dbt-demo"
version = "0.1.0"
description = "A simple tool to schedule dbt jobs with Airflow"
authors = ["Chelsey Beck <cbeck@mozilla.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
airflow-dbt = "0.4.0"
apache-airflow = "2.10.2"
apache-airflow-providers-google = "10.24.0"
dbt-bigquery = "1.8.3"
dbt-core = "1.8.7"
python-dotenv = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
